feat: mediation and websockets tests
